--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env npx @11ty/eleventy",
-    "dev": "cross-env npx @11ty/eleventy --serve --incremental",
+    "dev": "cross-env npx @11ty/eleventy --serve",
     "debug": "cross-env DEBUG=Eleventy* npx @11ty/eleventy",
     "compress": "npx lightningcss-cli --minify --bundle --targets \">= 0.25%, not dead\" src/style.css -o src/public/style.min.css",
     "watch": "chokidar src/style.css sec/js/*.js -c \"npm run compress\""
